ndb - bug#28804   Handle out of transaction buffer in TC for INDX lookups